tests/golden/type_errors/function_capture_local.cd
{
  let x = 1;
  fun f() {
    print x;
  }
}
